--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "ts-node": "^10.5.0",
     "twit": "^2.2.11",
     "twitter-api-v2": "^1.11.0"
+  },
+  "engines": {
+    "node": ">=16.13.1"
   }
 }
