--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "tsc": "tsc",
-    "build": "rimraf ./build && tsc ",
+    "build": "tsc --build",
     "start": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,7 +26,6 @@
     "inversify": "^6.0.1",
     "moment": "^2.29.1",
     "ts-node": "^10.5.0",
-    "twit": "^2.2.11",
     "twitter-api-v2": "^1.11.0"
   }
 }
