--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "tsc": "tsc",
     "build": "tsc --build",
     "start": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "tsc",
+    "watch-node": "nodemon dist/index.js",
+    "watch-ts": "tsc - w"
   },
   "keywords": [],
   "author": "",
