--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "tsc": "tsc",
-    "start": "node build/index.js",
+    "start": "node dist/index.js",
     "build": "tsc",
     "postinstall": "npm run build",
     "watch-node": "nodemon dist/index.js",
